# watcher

./: .dockerignore  .gitignore  LICENSE  docker-compose.yml  services.json  start.sh
docker/: Dockerfile  entrypoint.sh  healthcheck.sh
rust/: Cargo.toml
rust/src/: config.rs  config_helpers.rs  docker.rs  git.rs  lib.rs  logger.rs  main.rs  nginx.rs  service.rs  utils.rs
scripts/: entrypoint.sh  healthcheck.sh  push.sh  setup.sh  watch-github.sh
