[package]
name = "config-watcher"
version = "1.0.0"
description = "A service to monitor configuration updates from a Git repositorys"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
git2 = "0.18"
reqwest = { version = "0.11", features = ["json"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.13"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
thiserror = "1.0"
chrono = "0.4"
regex = "1.10"
walkdir = "2.4"
signal-hook = "0.3"
tempfile = "3.10"
lazy_static = "1.4"
ctrlc = "3.4"