[package]
name = "watcher"
version = "1.0.0"
description = "A service to monitor configuration updates from Git repositories"
authors = ["nuniesmith"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/nuniesmith/watcher"
keywords = ["configuration", "docker", "git", "monitoring", "devops"]
categories = ["command-line-utilities"]

[dependencies]
# Async runtime
tokio = { version = "1.36", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"

# Git integration
git2 = { version = "0.18", features = ["vendored-openssl"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# CLI arguments
clap = { version = "4.5", features = ["derive", "env"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
anyhow = "1.0"

# Date and time
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

# Utilities
regex = "1.10"
walkdir = "2.4"
tempfile = "3.10"
dirs = "5.0"
url = "2.5"
urlencoding = "2.1"

# Signal handling
ctrlc = "3.4"

# Optional dependencies
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
notify = { version = "6.1", optional = true }
bollard = { version = "0.15", optional = true }
thiserror = { version = "1.0", optional = true }

[features]
default = ["vendored-ssl"]
advanced-logging = ["tracing", "tracing-subscriber"]
file-monitoring = ["notify"]
docker-api = ["bollard"]
vendored-ssl = ["git2/vendored-openssl"]
structured-errors = ["thiserror"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[profile.dev]
# Optimize dependencies in development builds for faster compile times
opt-level = 0
debug = true
strip = false
debug-assertions = true
overflow-checks = true
lto = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]