[package]
name = "watcher"
version = "1.0.0"
description = "A service to monitor configuration updates from Git repositories"
authors = ["nuniesmith"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/nuniesmith/watcher"
keywords = ["configuration", "docker", "git", "monitoring", "devops"]
categories = ["command-line-utilities"]

[dependencies]
# Async runtime
async-trait = "0.1.88"
tokio = { version = "1.44", features = ["full"] }
tokio-util = { version = "0.7.14", features = ["codec"] }
futures = "0.3.31"

# Git integration
git2 = { version = "0.20", features = ["vendored-openssl"] }

# HTTP client
reqwest = { version = "0.12.15", features = ["json", "rustls-tls"], default-features = false }

# CLI arguments
clap = { version = "4.5", features = ["derive", "env"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
anyhow = "1.0"

# Date and time
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

# Utilities
regex = "1.10"
walkdir = "2.4"
tempfile = "3.10"
dirs = "6.0.0"
url = "2.5.4"
urlencoding = "2.1"

# Signal handling
ctrlc = "3.4"

# Optional dependencies
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
notify = { version = "8.0", optional = true }
bollard = { version = "0.18.1", optional = true }
thiserror = { version = "2.0.12", optional = true }

[features]
default = ["vendored-ssl"]
advanced-logging = ["tracing", "tracing-subscriber"]
file-monitoring = ["notify"]
docker-api = ["bollard"]
vendored-ssl = ["git2/vendored-openssl"]
structured-errors = ["thiserror"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[profile.dev]
# Optimize dependencies in development builds for faster compile times
opt-level = 0
debug = true
strip = false
debug-assertions = true
overflow-checks = true
lto = false

[profile.bench]
# Add benchmark profile for performance testing
lto = true
codegen-units = 1
opt-level = 3
debug = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]